# SettleOne

./: .gitignore  AGENTS.md  README.md  railway.toml
.github/: dependabot.yml
.github/workflows/: backend.yml  ci.yml  contracts.yml  frontend.yml  pr-checks.yml  release.yml
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/api/: ens.rs  error.rs  mod.rs  quote.rs  session.rs
backend/src/config/: mod.rs
backend/src/models/: mod.rs  session.rs
backend/src/services/: ens.rs  lifi.rs  mod.rs  session.rs
backend/src/utils/: mod.rs
contracts/: .env.example  hardhat.config.ts  package.json  pnpm-lock.yaml
contracts/contracts/: SessionSettlement.sol
contracts/contracts/interfaces/: ISessionSettlement.sol
contracts/contracts/libraries/: SessionErrors.sol  SessionTypes.sol
contracts/contracts/mocks/: MockUSDC.sol
contracts/scripts/: deploy.ts
contracts/test/: SessionSettlement.test.ts
docs/: architecture.md  demo-guide.md  future-roadmap.md  phases.md  plan.md  project.md  session.md  sponsor-integration.md
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConnectButton.tsx  Providers.tsx
frontend/src/components/features/: ChainSelector.tsx  ENSInput.tsx  PaymentForm.tsx  QuoteDisplay.tsx  SessionCard.tsx
frontend/src/hooks/: useDebounce.ts  useENS.ts  useQuote.ts  useSession.ts  useSettlement.ts  useYellow.ts
frontend/src/lib/: api.ts  contracts.ts  wagmi.ts  yellow.ts
frontend/src/types/: index.ts
